import "./doc.proto";

syntax = "proto3";

message Transaction {
  bytes objectid = 1;
  int64 nonce = 2;
  bytes from = 3;
  bytes to = 4;
  string operator = 5;
  repeated Document documents = 6;
}

message SignedTransaction {
  bytes signature = 1;
  bytes tx = 2;
}

message SignedTransactions {
  repeated SignedTransaction stxs = 1;
}